UserService added and changed config escan at main.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #Spring Security Properties
+# URL: https://www.baeldung.com/spring-boot-security-autoconfiguration
 spring.security.user.name=user
 
 #Spring database H2 properties
@@ -12,4 +13,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 #Spring API properties
+spring.data.rest.base-path=/api/v1
+server.port=8080
 #Actuators - Interessant: https://www.baeldung.com/spring-boot-actuators
