Added properties to show SQL query's and tested logger4j.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 #Properties create/drop database using hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
+spring-jpa.show-sql=true;
 
 #Spring API properties
 spring.data.rest.base-path=/api/v1
