Added CORS Mapping config + H2 console properties.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+##See the H2 console - URL:
+spring.h2.console.enabled=false
 
 #Properties create/drop database using hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
